--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -5,10 +5,11 @@ authors = [
     "Jesse Braham <jesse@beta7.io>",
     "Björn Quentin <bjoern.quentin@mobile-j.de>",
 ]
-edition     = "2021"
-description = "HAL for ESP32-S3 microcontrollers"
-repository  = "https://github.com/esp-rs/esp-hal"
-license     = "MIT OR Apache-2.0"
+edition      = "2021"
+rust-version = "1.60.0"
+description  = "HAL for ESP32-S3 microcontrollers"
+repository   = "https://github.com/esp-rs/esp-hal"
+license      = "MIT OR Apache-2.0"
 
 keywords = [
     "embedded",
@@ -24,25 +25,24 @@ categories = [
 ]
 
 [dependencies]
-bare-metal     = "1.0"
-embedded-hal   = { version = "0.2",  features = ["unproven"] }
+bare-metal     = "1.0.0"
+embedded-hal   = { version = "0.2.7",  features = ["unproven"] }
 embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
-xtensa-lx      = { version = "0.7",  features = ["esp32s3"] }
-xtensa-lx-rt   = { version = "0.13", features = ["esp32s3"], optional = true }
-r0             = { version = "1.0", optional = true }
+r0             = { version = "1.0.0",  optional = true }
+xtensa-lx      = { version = "0.7.0",  features = ["esp32s3"] }
+xtensa-lx-rt   = { version = "0.13.0", features = ["esp32s3"], optional = true }
 
 [dependencies.esp-hal-common]
 path     = "../esp-hal-common"
 features = ["esp32s3"]
 
 [dev-dependencies]
-embedded-graphics = "0.7"
-panic-halt        = "0.2"
-ssd1306           = "0.7"
-smart-leds        = "0.3"
-esp-println       = { version = "0.2.0", features = ["esp32s3"] }
-esp-backtrace     = { version = "0.2", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
-critical-section = "1"
+critical-section = "1.1.0"
+embedded-graphics = "0.7.1"
+esp-backtrace     = { version = "0.2.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
+esp-println       = { version = "0.2.2", features = ["esp32s3"] }
+smart-leds        = "0.3.0"
+ssd1306           = "0.7.1"
 
 [features]
 default     = ["rt", "vectored"]
@@ -51,12 +51,12 @@ eh1         = ["esp-hal-common/eh1"]
 rt          = ["xtensa-lx-rt/esp32s3"]
 smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
-vectored = ["esp-hal-common/vectored"]
+vectored    = ["esp-hal-common/vectored"]
 
 [[example]]
 name              = "hello_rgb"
 required-features = ["smartled"]
 
 [[example]]
-name = "spi_eh1_loopback"
+name              = "spi_eh1_loopback"
 required-features = ["eh1"]
