--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -57,10 +57,6 @@ smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
 vectored    = ["esp-hal-common/vectored"]
 
-# [[example]]
-# name              = "hello_rgb"
-# required-features = ["smartled"]
-
-# [[example]]
-# name = "spi_eh1_loopback"
-# required-features = ["eh1"]
+[[example]]
+name              = "spi_eh1_loopback"
+required-features = ["eh1"]
