--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -18,7 +18,7 @@ embedded-hal     = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-1   = { package = "embedded-hal", version = "=1.0.0-alpha.8", optional = true }
 fugit            = "0.3.6"
 nb               = "1.0.0"
-paste            = "1.0.8"
+paste            = "=1.0.8"
 procmacros       = { path = "../esp-hal-procmacros", package = "esp-hal-procmacros" }
 void             = { version = "1.0.2", default-features = false }
 
