--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name    = "esp32c3-hal"
-version = "0.1.0"
+version = "0.2.0"
 authors = [
     "Jesse Braham <jesse@beta7.io>",
     "Björn Quentin <bjoern.quentin@mobile-j.de>",
@@ -26,20 +26,17 @@ categories = [
 
 [dependencies]
 embedded-hal   = { version = "0.2.7", features = ["unproven"] }
-embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
+embedded-hal-1 = { version = "=1.0.0-alpha.8", package = "embedded-hal" }
+esp-hal-common = { version = "0.2.0",  features = ["esp32c3"], path = "../esp-hal-common" }
 r0             = "1.0.0"
 riscv          = "0.8.0"
 riscv-rt       = { version = "0.9.0", optional = true }
-
-[dependencies.esp-hal-common]
-path     = "../esp-hal-common"
-features = ["esp32c3"]
 
 [dev-dependencies]
 critical-section  = "1.1.0"
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.2.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
-esp-println       = { version = "0.2.2", features = ["esp32c3"] }
+esp-println       = { version = "0.3.0", features = ["esp32c3"] }
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
 
