--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name    = "esp32s3-hal"
-version = "0.1.0"
+version = "0.2.0"
 authors = [
     "Jesse Braham <jesse@beta7.io>",
     "Björn Quentin <bjoern.quentin@mobile-j.de>",
@@ -27,20 +27,17 @@ categories = [
 [dependencies]
 bare-metal     = "1.0.0"
 embedded-hal   = { version = "0.2.7",  features = ["unproven"] }
-embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
+embedded-hal-1 = { version = "=1.0.0-alpha.8", package = "embedded-hal" }
+esp-hal-common = { version = "0.2.0",  features = ["esp32s3"], path = "../esp-hal-common" }
 r0             = { version = "1.0.0",  optional = true }
 xtensa-lx      = { version = "0.7.0",  features = ["esp32s3"] }
 xtensa-lx-rt   = { version = "0.13.0", features = ["esp32s3"], optional = true }
 
-[dependencies.esp-hal-common]
-path     = "../esp-hal-common"
-features = ["esp32s3"]
-
 [dev-dependencies]
-critical-section = "1.1.0"
+critical-section  = "1.1.0"
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.2.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
-esp-println       = { version = "0.2.2", features = ["esp32s3"] }
+esp-println       = { version = "0.3.0", features = ["esp32s3"] }
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
 
