--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -15,7 +15,8 @@ license      = "MIT OR Apache-2.0"
 cfg-if           = "1.0.0"
 critical-section = "1.1.0"
 embedded-hal     = { version = "0.2.7", features = ["unproven"] }
-embedded-hal-1   = { package = "embedded-hal", version = "=1.0.0-alpha.8", optional = true }
+embedded-hal-1   = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
+embedded-hal-nb  = { version = "=1.0.0-alpha.1", optional = true }
 fugit            = "0.3.6"
 lock_api         = { version = "0.4.8", optional = true }
 nb               = "1.0.0"
@@ -53,7 +54,7 @@ esp32s2 = ["esp32s2/rt", "procmacros/xtensa", "xtensa-lx-rt/esp32s2", "xtensa-lx
 esp32s3 = ["esp32s3/rt", "procmacros/xtensa", "xtensa-lx-rt/esp32s3", "xtensa-lx/esp32s3", "critical-section/restore-state-u32", "lock_api"]
 
 # Implement the `embedded-hal==1.0.0-alpha.x` traits
-eh1 = ["embedded-hal-1"]
+eh1 = ["embedded-hal-1", "embedded-hal-nb"]
 
 # To use the external `smart_led` crate
 smartled = ["smart-leds-trait"]
