--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -24,39 +24,40 @@ categories = [
     "no-std",
 ]
 
-[patch.crates-io]
-esp-backtrace = { path = "/Users/jesse/Work/esp-backtrace" }
-esp-println   = { path = "/Users/jesse/Work/esp-println" }
-
 [dependencies]
-bare-metal     = "1.0.0"
-embedded-hal   = { version = "0.2.7", features = ["unproven"] }
-embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
-r0             = "1.0.0"
-riscv          = "0.8.0"
-riscv-rt       = { version = "0.9.0", optional = true }
-
-[dependencies.esp-hal-common]
-path     = "../esp-hal-common"
-features = ["esp32c2"]
+embedded-hal     = { version = "0.2.7", features = ["unproven"] }
+embedded-hal-1   = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
+embedded-hal-nb  = { version = "=1.0.0-alpha.1", optional = true }
+esp-hal-common   = { version = "0.2.0",  features = ["esp32c2"], path = "../esp-hal-common" }
+r0               = "1.0.0"
+riscv            = "0.8.0"
+riscv-rt         = { version = "0.9.0", optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.0"
 embedded-graphics = "0.7.1"
-esp-backtrace     = { version = "0.2.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
-esp-println       = { version = "0.2.2", features = ["esp32c2"] }
+esp-backtrace     = { version = "0.3.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"], path = "/Users/jesse/Work/esp-backtrace" }
+esp-println       = { version = "0.3.0", features = ["esp32c2"] }
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
 
 [features]
 default     = ["rt", "vectored"]
 direct-boot = []
-eh1         = ["esp-hal-common/eh1"]
+eh1         = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
 rt          = ["riscv-rt"]
 smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
 vectored    = ["esp-hal-common/vectored"]
 
-[[example]]
-name              = "spi_eh1_loopback"
-required-features = ["eh1"]
+# [[example]]
+# name              = "hello_rgb"
+# required-features = ["smartled"]
+
+# [[example]]
+# name              = "spi_eh1_loopback"
+# required-features = ["eh1"]
+
+# [[example]]
+# name              = "spi_eh1_device_loopback"
+# required-features = ["eh1"]
