--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chip: [esp32c3]
+        chip: [esp32c2, esp32c3]
         toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@v2
@@ -65,7 +65,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chip: [esp32c3]
+        chip: [esp32c2, esp32c3]
         toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@v2
@@ -111,7 +111,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chip: [esp32c3]
+        chip: [esp32c2, esp32c3]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
