--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -36,7 +36,7 @@ riscv-rt         = { version = "0.9.0", optional = true }
 [dev-dependencies]
 critical-section  = "1.1.0"
 embedded-graphics = "0.7.1"
-esp-backtrace     = { version = "0.3.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"], path = "/Users/jesse/Work/esp-backtrace" }
+esp-backtrace     = { version = "0.3.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { version = "0.3.0", features = ["esp32c2"] }
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
@@ -50,14 +50,10 @@ smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
 vectored    = ["esp-hal-common/vectored"]
 
-# [[example]]
-# name              = "hello_rgb"
-# required-features = ["smartled"]
+[[example]]
+name              = "spi_eh1_loopback"
+required-features = ["eh1"]
 
-# [[example]]
-# name              = "spi_eh1_loopback"
-# required-features = ["eh1"]
-
-# [[example]]
-# name              = "spi_eh1_device_loopback"
-# required-features = ["eh1"]
+[[example]]
+name              = "spi_eh1_device_loopback"
+required-features = ["eh1"]
