--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -23,6 +23,7 @@ nb               = "1.0.0"
 paste            = "=1.0.8"
 procmacros       = { version = "0.1.0", package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 void             = { version = "1.0.2", default-features = false }
+embedded-dma     = "0.2.0"
 
 # RISC-V
 riscv                       = { version = "0.9.0", optional = true }
