--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -25,7 +25,7 @@ procmacros       = { version = "0.1.0", package = "esp-hal-procmacros", path = "
 void             = { version = "1.0.2", default-features = false }
 
 # RISC-V
-riscv                       = { version = "0.8.0", optional = true }
+riscv                       = { version = "0.9.0", optional = true }
 riscv-atomic-emulation-trap = { version = "0.2.0", optional = true }
 
 # Xtensa
@@ -43,7 +43,7 @@ ufmt-write = { version = "0.1.0", optional = true }
 # corresponding feature. We rename the PAC packages because we cannot
 # have dependencies and features with the same names.
 esp32   = { version = "0.13.0", optional = true }
-esp32c2 = { package = "esp32c2", git = "https://github.com/esp-rs/esp-pacs", rev = "8a01143", optional = true }
+esp32c2 = { version = "0.2.0",  optional = true }
 esp32c3 = { version = "0.5.0",  optional = true }
 esp32s2 = { version = "0.3.0",  optional = true }
 esp32s3 = { version = "0.3.0",  optional = true }
