--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -27,6 +27,11 @@ embedded-dma         = "0.2.0"
 esp-synopsys-usb-otg = { version = "0.3.1", optional = true, features = ["fs", "esp32sx"] }
 usb-device           = { version = "0.2.3", optional = true }
 
+# async
+embassy-sync       = { package = "embassy-sync", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", optional = true }
+embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", optional = true, features = ["nightly"] }
+embedded-hal-async = { version = "0.1.0-alpha.1", optional = true }
+
 # RISC-V
 riscv                       = { version = "0.9.0", optional = true }
 riscv-atomic-emulation-trap = { version = "0.2.0", optional = true }
@@ -69,3 +74,10 @@ ufmt = ["ufmt-write"]
 
 # To use vectored interrupts (calling the handlers defined in the PAC)
 vectored = ["procmacros/interrupt"]
+
+# Implement the `embedded-hal-async==1.0.0-alpha.x` traits
+async = ["embedded-hal-async", "eh1", "embassy-sync"]
+embassy = ["embassy-time"]
+
+embassy-time-systick = []
+embassy-time-timg = []
