--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -34,6 +34,7 @@ xtensa-lx-rt     = { version = "0.13.0", features = ["esp32"], optional = true }
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
 embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "tick-16mhz"] }
 embedded-hal-async = { version = "0.1.0-alpha.1"}
+static_cell        = "1.0.0"
 
 [dev-dependencies]
 critical-section  = "1.1.0"
@@ -52,8 +53,8 @@ smartled  = ["esp-hal-common/smartled"]
 ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
 async = ["esp-hal-common/async"]
-embassy = ["esp-hal-common/embassy"]
-embassy-time-timg = ["esp-hal-common/embassy-time-timg"]
+embassy = ["esp-hal-common/embassy", "dep:embassy-executor"]
+embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-1mhz"]
 
 [[example]]
 name              = "hello_rgb"
