--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -33,13 +33,14 @@ esp-hal-common   = { version = "0.2.0",  features = ["esp32c3"], path = "../esp-
 r0               = "1.0.0"
 riscv            = "0.9.0"
 riscv-rt         = { version = "0.9.0", optional = true }
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
+embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "tick-16mhz"] }
+embedded-hal-async = { version = "0.1.0-alpha.1"}
+static_cell        = "1.0.0"
 
 [dev-dependencies]
 critical-section  = "1.1.0"
 embedded-graphics = "0.7.1"
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
-embassy-sync       = { package = "embassy-sync", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957"}
-embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "tick-16mhz"] }
 embedded-hal-async = { version = "0.1.0-alpha.1"}
 static_cell        = "1.0.0"
 esp-backtrace     = { version = "0.2.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
@@ -58,7 +59,7 @@ ufmt              = ["esp-hal-common/ufmt"]
 vectored          = ["esp-hal-common/vectored"]
 allow-opt-level-z = []
 async = ["esp-hal-common/async"]
-embassy = ["esp-hal-common/embassy"]
+embassy = ["esp-hal-common/embassy", "dep:embassy-executor"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-16mhz"]
 
 [[example]]
