--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -58,9 +58,9 @@ smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
 vectored    = ["esp-hal-common/vectored"]
 async = ["esp-hal-common/async"]
-embassy = ["esp-hal-common/embassy"]
-embassy-time-systick = ["esp-hal-common/embassy-time-systick"]
-embassy-time-timg = ["esp-hal-common/embassy-time-timg"]
+embassy = ["esp-hal-common/embassy", "dep:embassy-executor"]
+embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-16mhz"]
+embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-1mhz"]
 
 [[example]]
 name              = "hello_rgb"
