--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -36,6 +36,7 @@ embassy-sync       = { package = "embassy-sync", git = "https://github.com/embas
 embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly"] }
 embedded-hal-async = { version = "0.1.0-alpha.1"}
 static_cell        = "1.0.0"
+xtensa-atomic-emulation-trap = { version = "0.2.0", features = ["esp32s2"] }
 
 [dev-dependencies]
 critical-section  = "1.1.0"
@@ -55,9 +56,9 @@ smartled  = ["esp-hal-common/smartled"]
 ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
 async = ["esp-hal-common/async"]
-embassy = ["esp-hal-common/embassy"]
-embassy-time-systick = ["esp-hal-common/embassy-time-systick"]
-embassy-time-timg = ["esp-hal-common/embassy-time-timg"]
+embassy = ["esp-hal-common/embassy", "embassy-executor"]
+embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-16mhz"]
+embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-1mhz"]
 
 [[example]]
 name              = "hello_rgb"
