--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -15,7 +15,7 @@ keywords = [
     "embedded",
     "embedded-hal",
     "esp",
-    "esp32c3",
+    "esp32c6",
     "no-std",
 ]
 categories = [
@@ -31,14 +31,15 @@ embedded-hal       = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-1     = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
 embedded-hal-async = { version = "0.1.0-alpha.3", optional = true }
 embedded-hal-nb    = { version = "=1.0.0-alpha.1", optional = true }
-esp-hal-common     = { version = "0.4.0",  features = ["esp32c6"], path = "../esp-hal-common" }
+embedded-can       = { version = "0.4.1", optional = true }
+esp-hal-common     = { features = ["esp32c6"], path = "../esp-hal-common" }
 r0                 = "1.0.0"
-riscv              = "0.10.0"
-riscv-rt           = { version = "0.10.0", optional = true }
+riscv              = "0.10.1"
+riscv-rt           = { version = "0.11.0", optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.1"
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f9", features = ["nightly", "integrated-timers"] }
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
 esp-backtrace     = { git = "https://github.com/jessebraham/esp-backtrace", branch = "feature/chip-support", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { git = "https://github.com/esp-rs/esp-println", rev = "fc4e9cf", features = ["esp32c6"] }
@@ -49,15 +50,18 @@ static_cell       = "1.0.0"
 
 [features]
 default              = ["rt", "vectored"]
+mcu-boot             = []
 direct-boot          = []
-eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
+eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb", "dep:embedded-can"]
 rt                   = ["riscv-rt"]
 smartled             = ["esp-hal-common/smartled"]
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
+allow-opt-level-z    = []
 async                = ["esp-hal-common/async", "embedded-hal-async"]
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
+embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 
 # [[example]]
 # name              = "hello_rgb"
