Don't use underscores in feature names

--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -75,14 +75,14 @@ esp32c2-async = [ "esp32c2-hal/embassy", "esp32c2-hal/embassy-time-timg0", "asyn
 esp32-async = [ "esp32-hal/embassy", "esp32-hal/embassy-time-timg0", "async" ]
 esp32s2-async = [ "esp32s2-hal/embassy", "esp32s2-hal/embassy-time-timg0", "async" ]
 esp32s3-async = [ "esp32s3-hal/embassy", "esp32s3-hal/embassy-time-timg0", "async" ]
-wifi_logs = []
-dump_packets = []
+wifi-logs = []
+dump-packets = []
 utils = []
 enumset = []
 embedded-svc = [ "dep:enumset", "dep:embedded-svc", "utils" ]
 wifi = []
 ble = [ "esp32-hal?/bluetooth" ]
-phy_enable_usb = []
-ps_min_modem = []
-esp_now = [ "wifi", "embedded-svc" ]
+phy-enable-usb = []
+ps-min-modem = []
+esp-now = [ "wifi", "embedded-svc" ]
 async = [ "dep:embassy-sync"]
