Fix various things that have been missed when rebasing
Still missing a few examples (`clock_monitor`, `embassy_spi`, `ram`)

--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -74,6 +74,14 @@ required-features = ["eh1"]
 name              = "spi_eh1_device_loopback"
 required-features = ["eh1"]
 
+[[example]]
+name              = "embassy_hello_world"
+required-features = ["async", "embassy"]
+
+[[example]]
+name              = "embassy_wait"
+required-features = ["async", "embassy"]
+
 # [[example]]
-# name              = "embassy_hello_world"
-# required-features = ["embassy"]
+# name              = "embassy_spi"
+# required-features = ["async", "embassy"]
