ESP32-C6 WiFi support (#142)
* ESP32-C6 WiFi support

* Explain the `run_after_initialze_hack` function

--- a/esp-wifi/.cargo/config.toml
+++ b/esp-wifi/.cargo/config.toml
@@ -7,7 +7,17 @@ rustflags = [
 
     "-C", "force-frame-pointers",
 ]
- 
+
+[target.riscv32imac-unknown-none-elf]
+runner = "espflash flash --monitor"
+
+rustflags = [
+    "-C", "link-arg=-Tlinkall.x",
+    "-C", "link-arg=-Trom_functions.x",
+
+    "-C", "force-frame-pointers",
+]
+
 [target.xtensa-esp32-none-elf]
 runner = "espflash flash --monitor"
 
