Add SOC wakeup symbols

--- a/esp-hal-common/devices/esp32.toml
+++ b/esp-hal-common/devices/esp32.toml
@@ -53,4 +53,9 @@ peripherals = [
     "dac",
     "pdma",
     "radio",
+
+    # Wakeup SOC based on ESP-IDF:
+    "SOC_PM_SUPPORT_EXT_WAKEUP",
+    "SOC_PM_SUPPORT_TOUCH_SENSOR_WAKEUP",
+    "SOC_ULP_SUPPORTED",
 ]
