--- a/esp-hal-common/devices/esp32s2.toml
+++ b/esp-hal-common/devices/esp32s2.toml
@@ -51,4 +51,11 @@ peripherals = [
     "dac",
     "pdma",
     "radio",
+
+    # Wakeup SOC based on ESP-IDF:
+    "SOC_PM_SUPPORT_EXT_WAKEUP",
+    "SOC_PM_SUPPORT_TOUCH_SENSOR_WAKEUP",
+    "SOC_ULP_SUPPORTED",
+    "SOC_PM_SUPPORT_WIFI_WAKEUP",
+    "SOC_RISCV_COPROC_SUPPORTED",
 ]
