--- a/esp-hal-common/devices/esp32c2.toml
+++ b/esp-hal-common/devices/esp32c2.toml
@@ -34,4 +34,8 @@ peripherals = [
     "adc",
     "gdma",
     "radio",
+
+    # Wakeup SOC based on ESP-IDF:
+    "SOC_PM_SUPPORT_WIFI_WAKEUP",
+    "SOC_PM_SUPPORT_BT_WAKEUP",
 ]
