Add other SOC wakeups

--- a/esp-hal-common/devices/esp32s3.toml
+++ b/esp-hal-common/devices/esp32s3.toml
@@ -64,8 +64,12 @@ peripherals = [
 
     # Wakeup SOC based on ESP-IDF:
     "SOC_PM_SUPPORT_EXT_WAKEUP",
+    "SOC_PM_SUPPORT_EXT0_WAKEUP",
+    "SOC_PM_SUPPORT_EXT1_WAKEUP",
     "SOC_PM_SUPPORT_TOUCH_SENSOR_WAKEUP",
     "SOC_PM_SUPPORT_WIFI_WAKEUP",
     "SOC_PM_SUPPORT_BT_WAKEUP",
+    "SOC_UART_SUPPORT_WAKEUP_INT",
     "SOC_RISCV_COPROC_SUPPORTED",
+    "SOC_ULP_SUPPORTED",
 ]
