--- a/esp-hal-common/devices/esp32c2.toml
+++ b/esp-hal-common/devices/esp32c2.toml
@@ -38,4 +38,6 @@ peripherals = [
     # Wakeup SOC based on ESP-IDF:
     "SOC_PM_SUPPORT_WIFI_WAKEUP",
     "SOC_PM_SUPPORT_BT_WAKEUP",
+    "SOC_GPIO_SUPPORT_DEEPSLEEP_WAKEUP",
+    "SOC_UART_SUPPORT_WAKEUP_INT",
 ]
