--- a/esp-hal-common/devices/esp32c3.toml
+++ b/esp-hal-common/devices/esp32c3.toml
@@ -49,4 +49,6 @@ peripherals = [
     # Wakeup SOC based on ESP-IDF:
     "SOC_PM_SUPPORT_WIFI_WAKEUP",
     "SOC_PM_SUPPORT_BT_WAKEUP",
+    "SOC_UART_SUPPORT_WAKEUP_INT",
+    "SOC_GPIO_SUPPORT_DEEPSLEEP_WAKEUP",
 ]
