--- a/esp-hal-common/devices/esp32c6.toml
+++ b/esp-hal-common/devices/esp32c6.toml
@@ -76,5 +76,9 @@ peripherals = [
 
     # Wakeup SOC based on ESP-IDF:
     "SOC_PM_SUPPORT_WIFI_WAKEUP",
+    "SOC_PM_SUPPORT_BEACON_WAKEUP",
     "SOC_PM_SUPPORT_BT_WAKEUP",
+    "SOC_GPIO_SUPPORT_DEEPSLEEP_WAKEUP",
+    "SOC_UART_SUPPORT_WAKEUP_INT",
+    "SOC_PM_SUPPORT_EXT1_WAKEUP",
 ]
