--- a/esp-hal-common/devices/esp32s2.toml
+++ b/esp-hal-common/devices/esp32s2.toml
@@ -54,8 +54,11 @@ peripherals = [
 
     # Wakeup SOC based on ESP-IDF:
     "SOC_PM_SUPPORT_EXT_WAKEUP",
+    "SOC_PM_SUPPORT_EXT0_WAKEUP",
+    "SOC_PM_SUPPORT_EXT1_WAKEUP",
     "SOC_PM_SUPPORT_TOUCH_SENSOR_WAKEUP",
-    "SOC_ULP_SUPPORTED",
     "SOC_PM_SUPPORT_WIFI_WAKEUP",
+    "SOC_UART_SUPPORT_WAKEUP_INT",
+    "SOC_ULP_SUPPORTED",
     "SOC_RISCV_COPROC_SUPPORTED",
 ]
