--- a/esp-hal-common/devices/esp32c3.toml
+++ b/esp-hal-common/devices/esp32c3.toml
@@ -47,8 +47,8 @@ peripherals = [
     "radio",
 
     # Wakeup SOC based on ESP-IDF:
-    "SOC_PM_SUPPORT_WIFI_WAKEUP",
-    "SOC_PM_SUPPORT_BT_WAKEUP",
-    "SOC_UART_SUPPORT_WAKEUP_INT",
-    "SOC_GPIO_SUPPORT_DEEPSLEEP_WAKEUP",
+    "pm_support_wifi_wakeup",
+    "pm_support_bt_wakeup",
+    "uart_support_wakeup_int",
+    "gpio_support_deepsleep_wakeup",
 ]
