--- a/esp-hal-common/devices/esp32c6.toml
+++ b/esp-hal-common/devices/esp32c6.toml
@@ -75,10 +75,10 @@ peripherals = [
     "radio",
 
     # Wakeup SOC based on ESP-IDF:
-    "SOC_PM_SUPPORT_WIFI_WAKEUP",
-    "SOC_PM_SUPPORT_BEACON_WAKEUP",
-    "SOC_PM_SUPPORT_BT_WAKEUP",
-    "SOC_GPIO_SUPPORT_DEEPSLEEP_WAKEUP",
-    "SOC_UART_SUPPORT_WAKEUP_INT",
-    "SOC_PM_SUPPORT_EXT1_WAKEUP",
+    "pm_support_wifi_wakeup",
+    "pm_support_beacon_wakeup",
+    "pm_support_bt_wakeup",
+    "gpio_support_deepsleep_wakeup",
+    "uart_support_wakeup_int",
+    "pm_support_ext1_wakeup",
 ]
