--- a/esp-hal-common/devices/esp32s2.toml
+++ b/esp-hal-common/devices/esp32s2.toml
@@ -53,12 +53,11 @@ peripherals = [
     "radio",
 
     # Wakeup SOC based on ESP-IDF:
-    "SOC_PM_SUPPORT_EXT_WAKEUP",
-    "SOC_PM_SUPPORT_EXT0_WAKEUP",
-    "SOC_PM_SUPPORT_EXT1_WAKEUP",
-    "SOC_PM_SUPPORT_TOUCH_SENSOR_WAKEUP",
-    "SOC_PM_SUPPORT_WIFI_WAKEUP",
-    "SOC_UART_SUPPORT_WAKEUP_INT",
-    "SOC_ULP_SUPPORTED",
-    "SOC_RISCV_COPROC_SUPPORTED",
+    "pm_support_ext0_wakeup",
+    "pm_support_ext1_wakeup",
+    "pm_support_touch_sensor_wakeup",
+    "pm_support_wifi_wakeup",
+    "uart_support_wakeup_int",
+    "ulp_supported",
+    "riscv_coproc_supported",
 ]
